# KMCView

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  README_COLAB.md  enhanced_gui_viewer.py  enhanced_gui_viewer_backup.py  fixed_matplotlib_viewer.py  fixed_molecular_viewer.py  fixed_web_viewer.py  pyproject.toml  requirements.txt  setup.py  test_callback_fix.py  test_enhanced_gui.py  test_enhanced_viewers.py  test_feature_parity.py  zacros_analysis.py  zacros_colab_interactive.py  zacros_colab_viewer.py  zacros_web_viewer.py
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backup/: extract_real_positions.py  fixed_web_viewer.py  interactive_molecular_evolution.py  matplotlib_molecular_viewer.py  quick_temporal_analysis.py  real_positions_visualization.py  temporal_evolution_simple.py  working_molecular_viewer.py  working_web_viewer.py  zacros_analysis.py
input-output/: .lattice_cache.json  a  general_output.txt  lattice_analysis.py  lattice_output.txt  procstat_output.txt  restart.inf  slurm-158113.out  specnum_output.txt  sub_python  submit.sh
